trunk/Plugin_Core/src/tinyos/yeti/nesc/y.output
   0  $accept : nesc_file $end

   1  nesc_file :
   2            | includes_list interface
   3            | includes_list module
   4            | includes_list configuration
   5            | interface
   6            | module
   7            | configuration

   8  includes_list : includes
   9                | includes_list includes

  10  includes : INCLUDES NS_ntd identifier_list NS_td ';'

  11  interface : INTERFACE identifier '{' declaration_list '}'

  12  module : MODULE identifier specification module_implementation

  13  module_implementation : IMPLEMENTATION '{' '}'
  14                        | IMPLEMENTATION '{' translation_unit '}'

  15  configuration : CONFIGURATION identifier specification configuration_implementation

  16  configuration_implementation : IMPLEMENTATION '{' component_list connection_list '}'
  17                               | IMPLEMENTATION '{' connection_list '}'

  18  component_list : components
  19                 | component_list components

  20  components : COMPONENTS NS_ntd component_line NS_td ';'

  21  component_line : renamed_identifier
  22                 | component_line ',' renamed_identifier

  23  renamed_identifier : IDENTIFIER
  24                     | IDENTIFIER AS IDENTIFIER

  25  connection_list : connection
  26                  | connection_list connection

  27  connection : endpoint '=' endpoint ';'
  28             | endpoint PTR_OP endpoint ';'
  29             | endpoint LEFTARROW endpoint ';'

  30  endpoint : identifier
  31           | identifier '[' argument_expression_list ']'
  32           | identifier '.' identifier
  33           | identifier '.' identifier '[' argument_expression_list ']'

  34  specification : '{' uses_provides_list '}'
  35                | '{' '}'

  36  uses_provides_list : uses_provides
  37                     | uses_provides_list uses_provides

  38  uses_provides : USES specification_element_list
  39                | PROVIDES specification_element_list

  40  specification_element_list : specification_element
  41                             | '{' specification_elements '}'

  42  specification_elements : specification_element
  43                         | specification_elements specification_element

  44  specification_element : nesc_declaration
  45                        | INTERFACE NS_ntd renamed_identifier NS_td ';'
  46                        | INTERFACE NS_ntd renamed_identifier NS_td '[' parameter_type_list ']' ';'

  47  atomic_statement : ATOMIC statement

  48  call_kind : CALL
  49            | SIGNAL
  50            | POST

  51  NS_ntd :

  52  NS_td :

  53  NS_scope_enter :

  54  NS_scope_leave :

  55  NS_struct_push :

  56  NS_struct_pop :

  57  NS_id :

  58  NS_new_parm :

  59  NS_is_typedef :

  60  NS_direct_decl :

  61  NS_ptr_decl :

  62  identifier : NS_ntd TYPEDEF_NAME NS_td
  63             | IDENTIFIER
  64             | ENUMERATION_CONSTANT

  65  translation_unit : external_declaration
  66                   | translation_unit external_declaration

  67  external_declaration : NS_id function_definition
  68                       | NS_id declaration
  69                       | NS_id untyped_declaration

  70  declaration : declaration_specifiers NS_td ';'
  71              | declaration_specifiers init_declarator_list NS_td ';'
  72              | nesc_declaration

  73  nesc_declaration : nesc_declaration_specifiers NS_td ';'
  74                   | nesc_declaration_specifiers init_declarator_list NS_td ';'

  75  untyped_declaration : init_declarator_list ';'

  76  declaration_list : declaration
  77                   | declaration_list declaration

  78  declaration_specifiers : storage_class_specifier
  79                         | storage_class_specifier declaration_specifiers
  80                         | type_specifier
  81                         | type_specifier declaration_specifiers
  82                         | type_qualifier
  83                         | type_qualifier declaration_specifiers

  84  nesc_declaration_specifiers : DEFAULT declaration_specifiers
  85                              | nesc_storage_class_specifier
  86                              | nesc_storage_class_specifier declaration_specifiers
  87                              | declaration_specifiers nesc_storage_class_specifier

  88  nesc_storage_class_specifier : COMMAND
  89                               | nesc_storage_class_adjective COMMAND
  90                               | COMMAND nesc_storage_class_adjective
  91                               | EVENT
  92                               | nesc_storage_class_adjective EVENT
  93                               | EVENT nesc_storage_class_adjective
  94                               | TASK
  95                               | nesc_storage_class_adjective TASK
  96                               | TASK nesc_storage_class_adjective

  97  nesc_storage_class_adjective : ASYNC
  98                               | DEFAULT
  99                               | ASYNC DEFAULT
 100                               | DEFAULT ASYNC

 101  storage_class_specifier : NS_is_typedef TYPEDEF
 102                          | EXTERN
 103                          | STATIC
 104                          | AUTO
 105                          | REGISTER
 106                          | NORACE
 107                          | INLINE

 108  function_definition : declarator compound_statement
 109                      | declarator declaration_list compound_statement
 110                      | declaration_specifiers declarator NS_td compound_statement
 111                      | declaration_specifiers declarator NS_td declaration_list compound_statement
 112                      | nesc_function_definition

 113  nesc_function_definition : nesc_declaration_specifiers declarator NS_td compound_statement
 114                           | nesc_declaration_specifiers declarator NS_td declaration_list compound_statement

 115  type_specifier : NS_ntd actual_type_specifier
 116                 | type_adjective

 117  actual_type_specifier : VOID
 118                        | CHAR
 119                        | INT
 120                        | FLOAT
 121                        | DOUBLE
 122                        | TYPEDEF_NAME
 123                        | struct_or_union_specifier
 124                        | enum_specifier

 125  type_adjective : SHORT
 126                 | LONG
 127                 | SIGNED
 128                 | UNSIGNED

 129  type_qualifier : CONST
 130                 | VOLATILE

 131  struct_or_union_specifier : struct_or_union NS_struct_push '{' struct_declaration_list NS_struct_pop '}'
 132                            | struct_or_union identifier NS_struct_push '{' struct_declaration_list NS_struct_pop '}'
 133                            | struct_or_union identifier

 134  struct_or_union : STRUCT
 135                  | UNION

 136  struct_declaration_list : struct_declaration
 137                          | struct_declaration_list struct_declaration

 138  init_declarator_list : init_declarator
 139                       | init_declarator_list ',' init_declarator

 140  init_declarator : direct_declarator NS_direct_decl
 141                  | direct_declarator NS_direct_decl NS_td '=' initializer NS_ntd
 142                  | pointer direct_declarator NS_ptr_decl
 143                  | pointer direct_declarator NS_ptr_decl NS_td '=' initializer NS_ntd

 144  $$1 :

 145  struct_declaration : $$1 specifier_qualifier_list struct_declarator_list NS_td ';'

 146  specifier_qualifier_list : type_specifier
 147                           | type_specifier specifier_qualifier_list
 148                           | type_qualifier
 149                           | type_qualifier specifier_qualifier_list

 150  struct_declarator_list : struct_declarator
 151                         | struct_declarator_list ',' struct_declarator

 152  struct_declarator : declarator
 153                    | ':' constant_expression
 154                    | declarator ':' constant_expression

 155  enum_specifier : ENUM '{' enumerator_list '}'
 156                 | ENUM '{' enumerator_list ',' '}'
 157                 | ENUM identifier '{' enumerator_list '}'
 158                 | ENUM identifier '{' enumerator_list ',' '}'
 159                 | ENUM identifier

 160  enumerator_list : enumerator
 161                  | enumerator_list ',' enumerator

 162  enumerator : IDENTIFIER
 163             | IDENTIFIER '=' constant_expression

 164  declarator : direct_declarator NS_direct_decl
 165             | pointer direct_declarator NS_ptr_decl

 166  direct_declarator : IDENTIFIER
 167                    | '(' declarator ')'
 168                    | direct_declarator '[' ']'
 169                    | direct_declarator '[' constant_expression ']'
 170                    | direct_declarator NS_scope_enter '(' parameter_type_list ')' NS_scope_leave
 171                    | direct_declarator NS_scope_enter '(' ')' NS_scope_leave
 172                    | direct_declarator NS_scope_enter '(' identifier_list ')' NS_scope_leave
 173                    | IDENTIFIER '.' IDENTIFIER NS_scope_enter '(' identifier_list ')' NS_scope_leave
 174                    | IDENTIFIER '.' IDENTIFIER NS_scope_enter '(' parameter_type_list ')' NS_scope_leave
 175                    | IDENTIFIER '.' IDENTIFIER NS_scope_enter '(' ')'
 176                    | IDENTIFIER '.' IDENTIFIER NS_td '[' parameter_type_list ']' NS_scope_enter '(' parameter_type_list ')' NS_scope_leave
 177                    | IDENTIFIER '.' IDENTIFIER NS_td '[' parameter_type_list ']' NS_scope_enter '(' ')' NS_scope_leave

 178  pointer : '*'
 179          | '*' type_qualifier_list
 180          | '*' pointer
 181          | '*' type_qualifier_list pointer

 182  type_qualifier_list : type_qualifier
 183                      | type_qualifier_list type_qualifier

 184  parameter_type_list : parameter_list
 185                      | parameter_list ',' ELLIPSIS

 186  parameter_list : parameter_declaration
 187                 | parameter_list ',' parameter_declaration

 188  parameter_declaration : NS_new_parm declaration_specifiers declarator NS_td
 189                        | NS_new_parm declaration_specifiers NS_td
 190                        | NS_new_parm declaration_specifiers abstract_declarator NS_td

 191  identifier_list : IDENTIFIER
 192                  | identifier_list ',' IDENTIFIER

 193  initializer : assignment_expression
 194              | '{' initializer_list '}'
 195              | '{' initializer_list ',' '}'

 196  initializer_list : initializer
 197                   | initializer_list ',' initializer

 198  type_name : specifier_qualifier_list NS_td
 199            | specifier_qualifier_list NS_td abstract_declarator

 200  abstract_declarator : pointer
 201                      | direct_abstract_declarator
 202                      | pointer direct_abstract_declarator

 203  direct_abstract_declarator : '(' abstract_declarator ')'
 204                             | '[' ']'
 205                             | '[' constant_expression ']'
 206                             | direct_abstract_declarator '[' ']'
 207                             | direct_abstract_declarator '[' constant_expression ']'
 208                             | '(' ')'
 209                             | '(' parameter_type_list ')'
 210                             | direct_abstract_declarator '(' ')'
 211                             | direct_abstract_declarator '(' parameter_type_list ')'

 212  statement : labeled_statement
 213            | compound_statement
 214            | expression_statement
 215            | selection_statement
 216            | iteration_statement
 217            | jump_statement
 218            | atomic_statement

 219  labeled_statement : identifier ':' statement
 220                    | CASE constant_expression ':' statement
 221                    | DEFAULT ':' statement

 222  expression_statement : ';'
 223                       | expression ';'

 224  compound_statement : NS_scope_enter '{' NS_scope_leave '}'
 225                     | NS_scope_enter '{' statement_list NS_scope_leave '}'
 226                     | NS_scope_enter '{' declaration_list NS_scope_leave '}'
 227                     | NS_scope_enter '{' declaration_list statement_list NS_scope_leave '}'

 228  statement_list : statement
 229                 | statement_list statement

 230  selection_statement : IF '(' expression ')' statement
 231                      | IF '(' expression ')' statement ELSE statement
 232                      | SWITCH '(' expression ')' statement

 233  iteration_statement : WHILE '(' expression ')' statement
 234                      | DO statement WHILE '(' expression ')' ';'
 235                      | FOR '(' expression_statement expression_statement ')' statement
 236                      | FOR '(' expression_statement expression_statement expression ')' statement

 237  jump_statement : GOTO identifier ';'
 238                 | CONTINUE ';'
 239                 | BREAK ';'
 240                 | RETURN ';'
 241                 | RETURN expression ';'

 242  expression : assignment_expression
 243             | expression ',' assignment_expression

 244  assignment_expression : conditional_expression
 245                        | unary_expression assignment_operator assignment_expression

 246  assignment_operator : '='
 247                      | MUL_ASSIGN
 248                      | DIV_ASSIGN
 249                      | MOD_ASSIGN
 250                      | ADD_ASSIGN
 251                      | SUB_ASSIGN
 252                      | LEFT_ASSIGN
 253                      | RIGHT_ASSIGN
 254                      | AND_ASSIGN
 255                      | XOR_ASSIGN
 256                      | OR_ASSIGN

 257  conditional_expression : logical_or_expression
 258                         | logical_or_expression '?' expression ':' conditional_expression

 259  constant_expression : conditional_expression

 260  logical_or_expression : logical_and_expression
 261                        | logical_or_expression OR_OP logical_and_expression

 262  logical_and_expression : inclusive_or_expression
 263                         | logical_and_expression AND_OP inclusive_or_expression

 264  inclusive_or_expression : exclusive_or_expression
 265                          | inclusive_or_expression '|' exclusive_or_expression

 266  exclusive_or_expression : and_expression
 267                          | exclusive_or_expression '^' and_expression

 268  and_expression : equality_expression
 269                 | and_expression '&' equality_expression

 270  equality_expression : relational_expression
 271                      | equality_expression EQ_OP relational_expression
 272                      | equality_expression NE_OP relational_expression

 273  relational_expression : shift_expression
 274                        | relational_expression '<' shift_expression
 275                        | relational_expression '>' shift_expression
 276                        | relational_expression LE_OP shift_expression
 277                        | relational_expression GE_OP shift_expression

 278  shift_expression : additive_expression
 279                   | shift_expression LEFT_OP additive_expression
 280                   | shift_expression RIGHT_OP additive_expression

 281  additive_expression : multiplicative_expression
 282                      | additive_expression '+' multiplicative_expression
 283                      | additive_expression '-' multiplicative_expression

 284  multiplicative_expression : cast_expression
 285                            | OFFSETOF '(' identifier ',' identifier ')'
 286                            | OFFSETOF '(' struct_or_union_specifier ',' direct_declarator ')'
 287                            | multiplicative_expression '*' cast_expression
 288                            | multiplicative_expression '/' cast_expression
 289                            | multiplicative_expression '%' cast_expression

 290  cast_expression : unary_expression
 291                  | '(' type_name ')' cast_expression

 292  unary_expression : postfix_expression
 293                   | INC_OP unary_expression
 294                   | DEC_OP unary_expression
 295                   | unary_operator cast_expression
 296                   | SIZEOF unary_expression
 297                   | SIZEOF '(' type_name ')'

 298  unary_operator : '&'
 299                 | '*'
 300                 | '+'
 301                 | '-'
 302                 | '~'
 303                 | '!'

 304  postfix_expression : primary_expression
 305                     | postfix_expression '[' argument_expression_list ']'
 306                     | call_kind NS_ntd primary_expression NS_td '(' argument_expression_list ')'
 307                     | call_kind NS_ntd primary_expression NS_td '(' ')'
 308                     | call_kind NS_ntd primary_expression NS_td '[' argument_expression_list ']'
 309                     | postfix_expression '(' argument_expression_list ')'
 310                     | postfix_expression '(' ')'
 311                     | postfix_expression '.' identifier
 312                     | postfix_expression PTR_OP identifier
 313                     | postfix_expression INC_OP
 314                     | postfix_expression DEC_OP

 315  primary_expression : IDENTIFIER
 316                     | IDENTIFIER '.' IDENTIFIER
 317                     | constant
 318                     | STRING
 319                     | '(' expression ')'

 320  argument_expression_list : assignment_expression
 321                           | argument_expression_list ',' assignment_expression

 322  constant : INTEGER_CONSTANT
 323           | CHARACTER_CONSTANT
 324           | FLOATING_CONSTANT
 325           | ENUMERATION_CONSTANT

state 0
	$accept : . nesc_file $end  (0)
	nesc_file : .  (1)

	CONFIGURATION  shift 1
	INTERFACE  shift 2
	INCLUDES  shift 3
	MODULE  shift 4
	$end  reduce 1

	nesc_file  goto 5
	configuration  goto 6
	includes_list  goto 7
	interface  goto 8
	module  goto 9
	includes  goto 10


state 1
	configuration : CONFIGURATION . identifier specification configuration_implementation  (15)
	NS_ntd : .  (51)

	ENUMERATION_CONSTANT  shift 11
	IDENTIFIER  shift 12
	TYPEDEF_NAME  reduce 51

	identifier  goto 13
	NS_ntd  goto 14


state 2
	interface : INTERFACE . identifier '{' declaration_list '}'  (11)
	NS_ntd : .  (51)

	ENUMERATION_CONSTANT  shift 11
	IDENTIFIER  shift 12
	TYPEDEF_NAME  reduce 51

	identifier  goto 15
	NS_ntd  goto 14


state 3
	includes : INCLUDES . NS_ntd identifier_list NS_td ';'  (10)
	NS_ntd : .  (51)

	.  reduce 51

	NS_ntd  goto 16


state 4
	module : MODULE . identifier specification module_implementation  (12)
	NS_ntd : .  (51)

	ENUMERATION_CONSTANT  shift 11
	IDENTIFIER  shift 12
	TYPEDEF_NAME  reduce 51

	identifier  goto 17
	NS_ntd  goto 14


state 5
	$accept : nesc_file . $end  (0)

	$end  accept


state 6
	nesc_file : configuration .  (7)

	.  reduce 7


state 7
	nesc_file : includes_list . interface  (2)
	nesc_file : includes_list . module  (3)
	nesc_file : includes_list . configuration  (4)
	includes_list : includes_list . includes  (9)

	CONFIGURATION  shift 1
	INTERFACE  shift 2
	INCLUDES  shift 3
	MODULE  shift 4
	.  error

	configuration  goto 18
	interface  goto 19
	module  goto 20
	includes  goto 21


state 8
	nesc_file : interface .  (5)

	.  reduce 5


state 9
	nesc_file : module .  (6)

	.  reduce 6


state 10
	includes_list : includes .  (8)

	.  reduce 8


state 11
	identifier : ENUMERATION_CONSTANT .  (64)

	.  reduce 64


state 12
	identifier : IDENTIFIER .  (63)

	.  reduce 63


state 13
	configuration : CONFIGURATION identifier . specification configuration_implementation  (15)

	'{'  shift 22
	.  error

	specification  goto 23


state 14
	identifier : NS_ntd . TYPEDEF_NAME NS_td  (62)

	TYPEDEF_NAME  shift 24
	.  error


state 15
	interface : INTERFACE identifier . '{' declaration_list '}'  (11)

	'{'  shift 25
	.  error


state 16
	includes : INCLUDES NS_ntd . identifier_list NS_td ';'  (10)

	IDENTIFIER  shift 26
	.  error

	identifier_list  goto 27


state 17
	module : MODULE identifier . specification module_implementation  (12)

	'{'  shift 22
	.  error

	specification  goto 28


state 18
	nesc_file : includes_list configuration .  (4)

	.  reduce 4


state 19
	nesc_file : includes_list interface .  (2)

	.  reduce 2


state 20
	nesc_file : includes_list module .  (3)

	.  reduce 3


state 21
	includes_list : includes_list includes .  (9)

	.  reduce 9


state 22
	specification : '{' . uses_provides_list '}'  (34)
	specification : '{' . '}'  (35)

	PROVIDES  shift 29
	USES  shift 30
	'}'  shift 31
	.  error

	uses_provides_list  goto 32
	uses_provides  goto 33


state 23
	configuration : CONFIGURATION identifier specification . configuration_implementation  (15)

	IMPLEMENTATION  shift 34
	.  error

	configuration_implementation  goto 35


state 24
	identifier : NS_ntd TYPEDEF_NAME . NS_td  (62)
	NS_td : .  (52)

	.  reduce 52

	NS_td  goto 36


state 25
	interface : INTERFACE identifier '{' . declaration_list '}'  (11)
	NS_ntd : .  (51)
	NS_is_typedef : .  (59)

	EXTERN  shift 37
	STATIC  shift 38
	AUTO  shift 39
	REGISTER  shift 40
	SHORT  shift 41
	LONG  shift 42
	SIGNED  shift 43
	UNSIGNED  shift 44
	CONST  shift 45
	VOLATILE  shift 46
	DEFAULT  shift 47
	EVENT  shift 48
	TASK  shift 49
	ASYNC  shift 50
	NORACE  shift 51
	INLINE  shift 52
	COMMAND  shift 53
	TYPEDEF_NAME  reduce 51
	TYPEDEF  reduce 59
	CHAR  reduce 51
	INT  reduce 51
	FLOAT  reduce 51
	DOUBLE  reduce 51
	VOID  reduce 51
	STRUCT  reduce 51
	UNION  reduce 51
	ENUM  reduce 51

	declaration  goto 54
	nesc_declaration  goto 55
	type_qualifier  goto 56
	type_specifier  goto 57
	storage_class_specifier  goto 58
	type_adjective  goto 59
	nesc_storage_class_adjective  goto 60
	nesc_storage_class_specifier  goto 61
	nesc_declaration_specifiers  goto 62
	declaration_list  goto 63
	declaration_specifiers  goto 64
	NS_ntd  goto 65
	NS_is_typedef  goto 66


state 26
	identifier_list : IDENTIFIER .  (191)

	.  reduce 191


state 27
	includes : INCLUDES NS_ntd identifier_list . NS_td ';'  (10)
	identifier_list : identifier_list . ',' IDENTIFIER  (192)
	NS_td : .  (52)

	','  shift 67
	';'  reduce 52

	NS_td  goto 68


state 28
	module : MODULE identifier specification . module_implementation  (12)

	IMPLEMENTATION  shift 69
	.  error

	module_implementation  goto 70


state 29
	uses_provides : PROVIDES . specification_element_list  (39)
	NS_ntd : .  (51)
	NS_is_typedef : .  (59)

	EXTERN  shift 37
	STATIC  shift 38
	AUTO  shift 39
	REGISTER  shift 40
	SHORT  shift 41
	LONG  shift 42
	SIGNED  shift 43
	UNSIGNED  shift 44
	CONST  shift 45
	VOLATILE  shift 46
	DEFAULT  shift 47
	EVENT  shift 48
	INTERFACE  shift 71
	TASK  shift 49
	ASYNC  shift 50
	NORACE  shift 51
	INLINE  shift 52
	COMMAND  shift 53
	'{'  shift 72
	TYPEDEF_NAME  reduce 51
	TYPEDEF  reduce 59
	CHAR  reduce 51
	INT  reduce 51
	FLOAT  reduce 51
	DOUBLE  reduce 51
	VOID  reduce 51
	STRUCT  reduce 51
	UNION  reduce 51
	ENUM  reduce 51

	nesc_declaration  goto 73
	specification_element  goto 74
	type_qualifier  goto 56
	type_specifier  goto 57
	storage_class_specifier  goto 58
	type_adjective  goto 59
	nesc_storage_class_adjective  goto 60
	nesc_storage_class_specifier  goto 61
	specification_element_list  goto 75
	nesc_declaration_specifiers  goto 62
	declaration_specifiers  goto 76
	NS_ntd  goto 65
	NS_is_typedef  goto 66


state 30
	uses_provides : USES . specification_element_list  (38)
	NS_ntd : .  (51)
	NS_is_typedef : .  (59)

	EXTERN  shift 37
	STATIC  shift 38
	AUTO  shift 39
	REGISTER  shift 40
	SHORT  shift 41
	LONG  shift 42
	SIGNED  shift 43
	UNSIGNED  shift 44
	CONST  shift 45
	VOLATILE  shift 46
	DEFAULT  shift 47
	EVENT  shift 48
	INTERFACE  shift 71
	TASK  shift 49
	ASYNC  shift 50
	NORACE  shift 51
	INLINE  shift 52
	COMMAND  shift 53
	'{'  shift 72
	TYPEDEF_NAME  reduce 51
	TYPEDEF  reduce 59
	CHAR  reduce 51
	INT  reduce 51
	FLOAT  reduce 51
	DOUBLE  reduce 51
	VOID  reduce 51
	STRUCT  reduce 51
	UNION  reduce 51
	ENUM  reduce 51

	nesc_declaration  goto 73
	specification_element  goto 74
	type_qualifier  goto 56
	type_specifier  goto 57
	storage_class_specifier  goto 58
	type_adjective  goto 59
	nesc_storage_class_adjective  goto 60
	nesc_storage_class_specifier  goto 61
	specification_element_list  goto 77
	nesc_declaration_specifiers  goto 62
	declaration_specifiers  goto 76
	NS_ntd  goto 65
	NS_is_typedef  goto 66


state 31
	specification : '{' '}' .  (35)

	.  reduce 35


state 32
	specification : '{' uses_provides_list . '}'  (34)
	uses_provides_list : uses_provides_list . uses_provides  (37)

	PROVIDES  shift 29
	USES  shift 30
	'}'  shift 78
	.  error

	uses_provides  goto 79


state 33
	uses_provides_list : uses_provides .  (36)

	.  reduce 36


state 34
	configuration_implementation : IMPLEMENTATION . '{' component_list connection_list '}'  (16)
	configuration_implementation : IMPLEMENTATION . '{' connection_list '}'  (17)

	'{'  shift 80
	.  error


state 35
	configuration : CONFIGURATION identifier specification configuration_implementation .  (15)

	.  reduce 15


state 36
	identifier : NS_ntd TYPEDEF_NAME NS_td .  (62)

	.  reduce 62


state 37
	storage_class_specifier : EXTERN .  (102)

	.  reduce 102


state 38
	storage_class_specifier : STATIC .  (103)

	.  reduce 103


state 39
	storage_class_specifier : AUTO .  (104)

	.  reduce 104


state 40
	storage_class_specifier : REGISTER .  (105)

	.  reduce 105


state 41
	type_adjective : SHORT .  (125)

	.  reduce 125


state 42
	type_adjective : LONG .  (126)

	.  reduce 126


state 43
	type_adjective : SIGNED .  (127)

	.  reduce 127


state 44
	type_adjective : UNSIGNED .  (128)

	.  reduce 128


state 45
	type_qualifier : CONST .  (129)

	.  reduce 129


state 46
	type_qualifier : VOLATILE .  (130)

	.  reduce 130


state 47
	nesc_declaration_specifiers : DEFAULT . declaration_specifiers  (84)
	nesc_storage_class_adjective : DEFAULT .  (98)
	nesc_storage_class_adjective : DEFAULT . ASYNC  (100)
	NS_ntd : .  (51)
	NS_is_typedef : .  (59)

	EXTERN  shift 37
	STATIC  shift 38
	AUTO  shift 39
	REGISTER  shift 40
	SHORT  shift 41
	LONG  shift 42
	SIGNED  shift 43
	UNSIGNED  shift 44
	CONST  shift 45
	VOLATILE  shift 46
	ASYNC  shift 81
	NORACE  shift 51
	INLINE  shift 52
	TYPEDEF_NAME  reduce 51
	TYPEDEF  reduce 59
	CHAR  reduce 51
	INT  reduce 51
	FLOAT  reduce 51
	DOUBLE  reduce 51
	VOID  reduce 51
	STRUCT  reduce 51
	UNION  reduce 51
	ENUM  reduce 51
	EVENT  reduce 98
	TASK  reduce 98
	COMMAND  reduce 98

	type_qualifier  goto 56
	type_specifier  goto 57
	storage_class_specifier  goto 58
	type_adjective  goto 59
	declaration_specifiers  goto 82
	NS_ntd  goto 65
	NS_is_typedef  goto 66


state 48
	nesc_storage_class_specifier : EVENT .  (91)
	nesc_storage_class_specifier : EVENT . nesc_storage_class_adjective  (93)

	DEFAULT  shift 83
	ASYNC  shift 50
	TYPEDEF_NAME  reduce 91
	TYPEDEF  reduce 91
	EXTERN  reduce 91
	STATIC  reduce 91
	AUTO  reduce 91
	REGISTER  reduce 91
	CHAR  reduce 91
	SHORT  reduce 91
	INT  reduce 91
	LONG  reduce 91
	SIGNED  reduce 91
	UNSIGNED  reduce 91
	FLOAT  reduce 91
	DOUBLE  reduce 91
	CONST  reduce 91
	VOLATILE  reduce 91
	VOID  reduce 91
	STRUCT  reduce 91
	UNION  reduce 91
	ENUM  reduce 91
	IDENTIFIER  reduce 91
	NORACE  reduce 91
	INLINE  reduce 91
	';'  reduce 91
	'('  reduce 91
	'*'  reduce 91

	nesc_storage_class_adjective  goto 84


state 49
	nesc_storage_class_specifier : TASK .  (94)
	nesc_storage_class_specifier : TASK . nesc_storage_class_adjective  (96)

	DEFAULT  shift 83
	ASYNC  shift 50
	TYPEDEF_NAME  reduce 94
	TYPEDEF  reduce 94
	EXTERN  reduce 94
	STATIC  reduce 94
	AUTO  reduce 94
	REGISTER  reduce 94
	CHAR  reduce 94
	SHORT  reduce 94
	INT  reduce 94
	LONG  reduce 94
	SIGNED  reduce 94
	UNSIGNED  reduce 94
	FLOAT  reduce 94
	DOUBLE  reduce 94
	CONST  reduce 94
	VOLATILE  reduce 94
	VOID  reduce 94
	STRUCT  reduce 94
	UNION  reduce 94
	ENUM  reduce 94
	IDENTIFIER  reduce 94
	NORACE  reduce 94
	INLINE  reduce 94
	';'  reduce 94
	'('  reduce 94
	'*'  reduce 94

	nesc_storage_class_adjective  goto 85


state 50
	nesc_storage_class_adjective : ASYNC .  (97)
	nesc_storage_class_adjective : ASYNC . DEFAULT  (99)

	DEFAULT  shift 86
	TYPEDEF_NAME  reduce 97
	TYPEDEF  reduce 97
	EXTERN  reduce 97
	STATIC  reduce 97
	AUTO  reduce 97
	REGISTER  reduce 97
	CHAR  reduce 97
	SHORT  reduce 97
	INT  reduce 97
	LONG  reduce 97
	SIGNED  reduce 97
	UNSIGNED  reduce 97
	FLOAT  reduce 97
	DOUBLE  reduce 97
	CONST  reduce 97
	VOLATILE  reduce 97
	VOID  reduce 97
	STRUCT  reduce 97
	UNION  reduce 97
	ENUM  reduce 97
	IDENTIFIER  reduce 97
	EVENT  reduce 97
	TASK  reduce 97
	NORACE  reduce 97
	INLINE  reduce 97
	COMMAND  reduce 97
	';'  reduce 97
	'('  reduce 97
	'*'  reduce 97


state 51
	storage_class_specifier : NORACE .  (106)

	.  reduce 106


state 52
	storage_class_specifier : INLINE .  (107)

	.  reduce 107


state 53
	nesc_storage_class_specifier : COMMAND .  (88)
	nesc_storage_class_specifier : COMMAND . nesc_storage_class_adjective  (90)

	DEFAULT  shift 83
	ASYNC  shift 50
	TYPEDEF_NAME  reduce 88
	TYPEDEF  reduce 88
	EXTERN  reduce 88
	STATIC  reduce 88
	AUTO  reduce 88
	REGISTER  reduce 88
	CHAR  reduce 88
	SHORT  reduce 88
	INT  reduce 88
	LONG  reduce 88
	SIGNED  reduce 88
	UNSIGNED  reduce 88
	FLOAT  reduce 88
	DOUBLE  reduce 88
	CONST  reduce 88
	VOLATILE  reduce 88
	VOID  reduce 88
	STRUCT  reduce 88
	UNION  reduce 88
	ENUM  reduce 88
	IDENTIFIER  reduce 88
	NORACE  reduce 88
	INLINE  reduce 88
	';'  reduce 88
	'('  reduce 88
	'*'  reduce 88

	nesc_storage_class_adjective  goto 87


state 54
	declaration_list : declaration .  (76)

	.  reduce 76


state 55
	declaration : nesc_declaration .  (72)

	.  reduce 72


state 56
	declaration_specifiers : type_qualifier .  (82)
	declaration_specifiers : type_qualifier . declaration_specifiers  (83)
	NS_ntd : .  (51)
	NS_is_typedef : .  (59)

	EXTERN  shift 37
	STATIC  shift 38
	AUTO  shift 39
	REGISTER  shift 40
	SHORT  shift 41
	LONG  shift 42
	SIGNED  shift 43
	UNSIGNED  shift 44
	CONST  shift 45
	VOLATILE  shift 46
	NORACE  shift 51
	INLINE  shift 52
	TYPEDEF_NAME  reduce 51
	TYPEDEF  reduce 59
	CHAR  reduce 51
	INT  reduce 51
	FLOAT  reduce 51
	DOUBLE  reduce 51
	VOID  reduce 51
	STRUCT  reduce 51
	UNION  reduce 51
	ENUM  reduce 51
	DEFAULT  reduce 82
	IDENTIFIER  reduce 82
	EVENT  reduce 82
	TASK  reduce 82
	ASYNC  reduce 82
	COMMAND  reduce 82
	']'  reduce 82
	','  reduce 82
	';'  reduce 82
	'('  reduce 82
	'*'  reduce 82
	')'  reduce 82
	'['  reduce 82
